--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -45,4 +45,13 @@
     cursor: not-allowed;
     opacity: 0.6;
   }
+
+  .msg-container, .ql-editor .ql-blank{
+    border-style: dashed;
+    border-color: #007bff;
+    height: 120px;
+    border-bottom: none;
+    margin-bottom: 50px;
+    border-radius: 10px;
+  }
   
